--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rocketseat-bootcamp-gostack09-gobarber",
+  "name": "gobarber-api",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
